--- a/contact.html
+++ b/contact.html
@@ -17,17 +17,33 @@
             <a href="contact.html">CONTACT US</a>
         </nav>
     </header>
-    <main class="fade-in">
-        <h2>Contact Us</h2>
-        <p>We'd love to hear from you! Whether you have questions, want to place an order, or need directions — we're ready to assist.</p>
-        <p><strong>📍 Address:</strong> Near Dali Everyday Grocery, Salinas 2</p>
-        <p><strong>📞 Phone:</strong> 09086524588 (SMART) — SMS or Viber welcome</p>
-        <p><strong>🕒 Store Hours:</strong> Monday to Sunday, 7:00 AM - 7:00 PM</p>
+
+    <main class="fade-in" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 40px; align-items: flex-start; padding: 20px;">
+    
+        <div style="flex: 1 1 300px; max-width: 400px;">
+            <h2>Contact Us</h2>
+            <p>We'd love to hear from you! Whether you have questions, want to place an order, or need directions — we're ready to assist.</p>
+            <p><strong>📍 Address:</strong> Sir Paco's Talipapa </p>
+            <p><strong>📞 Phone:</strong> 09086524588 (SMART) — SMS or Viber welcome</p>
+            <p><strong>🕒 Store Hours:</strong> Monday to Sunday, 7:00 AM - 7:00 PM</p>
+        </div>
+
+    
+        <div style="flex: 1 1 300px; max-width: 600px;">
+            <iframe
+                src="https://www.google.com/maps?q=Sir Paco's Talipapa&hl=en&z=18&output=embed"
+                width="100%"
+                height="300"
+                style="border:0; border-radius: 12px; box-shadow: 0 0 10px rgba(0,0,0,0.3);"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade">
+            </iframe>
+        </div>
     </main>
-    <main>
-    </main>
-      <footer class="site-footer">
-    <p>© 2025 Anna & Gerry Meat Shop. All rights reserved.</p>
-  </footer>
+
+    <footer class="site-footer">
+        <p>© 2025 Anna & Gerry Meat Shop. All rights reserved.</p>
+    </footer>
 </body>
 </html>
