--- a/ourmeats.html
+++ b/ourmeats.html
@@ -12,49 +12,184 @@
     <nav>
       <a href="index.html">HOME</a>
       <a href="about.html">ABOUT US</a>
-      <a href="ourmeats.html">OUR MEATS</a>
+      <a href="ourmeats.html" class="active">OUR MEATS</a>
       <a href="bestseller.html">BEST SELLER</a>
       <a href="contact.html">CONTACT US</a>
     </nav>
   </header>
 
   <main class="fade-in">
-    <div class="product" >
-    <h2>Our Meats</h2>
-    <h3>Pork Section</h3>
-    <div class="meat-gallery">
-      <div class="meat-item"><img src="Pork Section/PORK PATA.png" alt="Pork Pata"><div class="caption">Pork Pata</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK LIEMPO.jpg" alt="Pork Liempo"><div class="caption">Pork Liempo</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK CHOP.jpg" alt="Pork Chop"><div class="caption">Pork Chop</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK LIVER.jpg" alt="Pork Liver"><div class="caption">Pork Liver</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK HEAD.jpg" alt="Pork Head"><div class="caption">Pork Head</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK RIBS.jpg" alt="Pork Ribs"><div class="caption">Pork Ribs</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK KASIM.webp" alt="Pork Kasim"><div class="caption">Pork Kasim</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK MASK.jpg" alt="Pork Mask"><div class="caption">Pork Mask</div></div>
-      <div class="meat-item"><img src="Pork Section/PORK LOMO.jpg" alt="Pork Lomo"><div class="caption">Pork Lomo</div></div>
-    </div>
-    <h3 style="margin-top: 40px;">Chicken Section</h3>
-    <div class="meat-gallery">
-      <div class="meat-item"><img src="Chicken Section/Whole Chicken.jpg" alt="Whole Chicken"><div class="caption">Whole Chicken</div></div>
-      <div class="meat-item"><img src="Chicken Section/Chicken Breast.jpg" alt="Chicken Breast"><div class="caption">Chicken Breast</div></div>
-      <div class="meat-item"><img src="Chicken Section/Chicken Thigh.jpg" alt="Chicken Thigh"><div class="caption">Chicken Thigh</div></div>
-      <div class="meat-item"><img src="Chicken Section/Chicken Leg.jpg" alt="Chicken Leg"><div class="caption">Chicken Leg</div></div>
-      <div class="meat-item"><img src="Chicken Section/Chicken wing.jpg" alt="Chicken Wing"><div class="caption">Chicken Wing</div></div>
-      <div class="meat-item"><img src="Chicken Section/Leg Quarter.jpg" alt="Leg Quarter"><div class="caption">Leg Quarter</div></div>
-      <div class="meat-item"><img src="Chicken Section/Breast Quarter.jpg" alt="Breast Quarter"><div class="caption">Breast Quarter</div></div>
-      <div class="meat-item"><img src="Chicken Section/Neck.jpg" alt="Neck"><div class="caption">Neck</div></div>
-      <div class="meat-item"><img src="Chicken Section/Feet.jpg" alt="Feet (Adidas)"><div class="caption">Feet (Adidas)</div></div>
-      <div class="meat-item"><img src="Chicken Section/Liver.jpg" alt="Liver"><div class="caption">Liver</div></div>
-    </div>
+    <div class="product">
+      <h2>Our Meats</h2>
 
-    <h3 style="margin-top: 40px;">Beef Section</h3>
-    <div class="meat-gallery">
-      <div class="meat-item"><img src="Beef Section/Beef Ribs.jpg" alt="Beef Ribs"><div class="caption">Beef Ribs</div></div>
-      <div class="meat-item"><img src="Beef Section/Beef Chuck.jpg" alt="Beef Chuck"><div class="caption">Beef Chuck</div></div>
-      <div class="meat-item"><img src="Beef Section/Beef Steak.jpg" alt="Tenderloin"><div class="caption">Tenderloin</div></div>
-    </div>
+      <h3>Pork Section</h3>
+      <div class="meat-gallery">
+        <div class="meat-item">
+          <img src="Pork Section/PORK PATA.png" alt="Pork Pata" />
+          <div class="caption">
+            <div class="meat-name">Pork Pata</div>
+            <div class="meat-desc">Perfect for slow cooking and stews.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK LIEMPO.jpg" alt="Pork Liempo" />
+          <div class="caption">
+            <div class="meat-name">Pork Liempo</div>
+            <div class="meat-desc">Ideal for grilling and roasting.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK CHOP.jpg" alt="Pork Chop" />
+          <div class="caption">
+            <div class="meat-name">Pork Chop</div>
+            <div class="meat-desc">Great for quick pan-frying.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK LIVER.jpg" alt="Pork Liver" />
+          <div class="caption">
+            <div class="meat-name">Pork Liver</div>
+            <div class="meat-desc">Rich in iron and vitamins.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK HEAD.jpg" alt="Pork Head" />
+          <div class="caption">
+            <div class="meat-name">Pork Head</div>
+            <div class="meat-desc">Perfect for making head cheese.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK RIBS.jpg" alt="Pork Ribs" />
+          <div class="caption">
+            <div class="meat-name">Pork Ribs</div>
+            <div class="meat-desc">Delicious when barbecued or slow-cooked.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK KASIM.webp" alt="Pork Kasim" />
+          <div class="caption">
+            <div class="meat-name">Pork Kasim</div>
+            <div class="meat-desc">Tender and flavorful cut for roasting.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK MASK.jpg" alt="Pork Mask" />
+          <div class="caption">
+            <div class="meat-name">Pork Mask</div>
+            <div class="meat-desc">Used in traditional recipes and dishes.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Pork Section/PORK LOMO.jpg" alt="Pork Lomo" />
+          <div class="caption">
+            <div class="meat-name">Pork Lomo</div>
+            <div class="meat-desc">Lean cut perfect for grilling.</div>
+          </div>
+        </div>
+      </div>
+
+      <h3 style="margin-top: 40px;">Chicken Section</h3>
+      <div class="meat-gallery">
+        <div class="meat-item">
+          <img src="Chicken Section/Whole Chicken.jpg" alt="Whole Chicken" />
+          <div class="caption">
+            <div class="meat-name">Whole Chicken</div>
+            <div class="meat-desc">Versatile for roasting or grilling whole.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Chicken Breast.jpg" alt="Chicken Breast" />
+          <div class="caption">
+            <div class="meat-name">Chicken Breast</div>
+            <div class="meat-desc">Lean and perfect for healthy meals.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Chicken Thigh.jpg" alt="Chicken Thigh" />
+          <div class="caption">
+            <div class="meat-name">Chicken Thigh</div>
+            <div class="meat-desc">Juicy and flavorful, great for grilling.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Chicken Leg.jpg" alt="Chicken Leg" />
+          <div class="caption">
+            <div class="meat-name">Chicken Leg</div>
+            <div class="meat-desc">Ideal for roasting or frying.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Chicken wing.jpg" alt="Chicken Wing" />
+          <div class="caption">
+            <div class="meat-name">Chicken Wing</div>
+            <div class="meat-desc">Perfect for appetizers and snacks.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Leg Quarter.jpg" alt="Leg Quarter" />
+          <div class="caption">
+            <div class="meat-name">Leg Quarter</div>
+            <div class="meat-desc">Great for slow cooking and roasting.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Breast Quarter.jpg" alt="Breast Quarter" />
+          <div class="caption">
+            <div class="meat-name">Breast Quarter</div>
+            <div class="meat-desc">Lean cut suitable for various dishes.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Neck.jpg" alt="Neck" />
+          <div class="caption">
+            <div class="meat-name">Neck</div>
+            <div class="meat-desc">Great for stocks and soups.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Feet.jpg" alt="Feet (Adidas)" />
+          <div class="caption">
+            <div class="meat-name">Feet (Adidas)</div>
+            <div class="meat-desc">Popular in soups and broths.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Chicken Section/Liver.jpg" alt="Liver" />
+          <div class="caption">
+            <div class="meat-name">Liver</div>
+            <div class="meat-desc">Nutritious and rich in flavor.</div>
+          </div>
+        </div>
+      </div>
+
+      <h3 style="margin-top: 40px;">Beef Section</h3>
+      <div class="meat-gallery">
+        <div class="meat-item">
+          <img src="Beef Section/Beef Ribs.jpg" alt="Beef Ribs" />
+          <div class="caption">
+            <div class="meat-name">Beef Ribs</div>
+            <div class="meat-desc">Excellent for slow cooking and barbecuing.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Beef Section/Beef Chuck.jpg" alt="Beef Chuck" />
+          <div class="caption">
+            <div class="meat-name">Beef Chuck</div>
+            <div class="meat-desc">Perfect for stews and braising.</div>
+          </div>
+        </div>
+        <div class="meat-item">
+          <img src="Beef Section/Beef Steak.jpg" alt="Tenderloin" />
+          <div class="caption">
+            <div class="meat-name">Tenderloin</div>
+            <div class="meat-desc">Lean and tender, great for grilling.</div>
+          </div>
+        </div>
+      </div>
     </div>
   </main>
+
   <footer class="site-footer">
     <p>© 2025 Anna & Gerry Meat Shop. All rights reserved.</p>
   </footer>
